Home and Products Page

--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -16,20 +16,30 @@
         <!--Banner, consists of logo and navbar-->
         <div class="banner">
             <section class="navbar">
-                <img src="images/logo-no-slogan.png" width="75px" alt="UNITOP logo">
+                <img src="images/logo-no-slogan.png" width="85px" alt="UNITOP logo">
                 <h1>UNITOP</h1>
                 <div class="links">
                     <nav>
+                        <div class="img-links">
+                             <!--Customer basket-->
+                            <img src="images/search.png">
+                            <img src="images/home_4991416.png">
+                            <img src="images/logo-no-slogan.png">
+                            <img src="images/notification_9383540.png">
+                            <img src="images/avatar_9892372.png">
+                            <img src="images/checkout_4765148.png" alt="Customer Basket Icon">
+                        </div>
+
+                        <div class="nav-links">
                         <ul>
                             <li><a href="">Browse</a></li>
                             <li><a href="">Home</a></li>
                             <li><a href="">About Us</a></li>
                             <li><a href="">Contact Us</a></li>
                             <li><a href="">Account</a></li>
+                            <li><a href="">Basket</a></li>
                         </ul>
-                        <!--Customer basket-->
-                        <img src="images/avatar_9892372.png">
-                        <img src="images/shopping-basket_8467742.png" alt="Customer Basket Icon">
+                        </div>
                     </nav>
 
                    </div>
@@ -62,7 +72,7 @@
     <h2>Featured Products</h2>
     <section class="row">
         <section class="products">
-            <img src="images/legion9iGen8.png" alt="Lenovo Legion 9i Gen 8 Laptop">
+            <a href="products.html"> <img src="images/legion9iGen8.png" alt="Lenovo Legion 9i Gen 8 Laptop"> </a>
             <h4>Lenovo</h4>
             <p>£1</p>
         </section>
