--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -22,12 +22,12 @@
                     <nav>
                         <div class="img-links">
                              <!--Customer basket-->
-                            <img src="images/search.png">
-                            <img src="images/home_4991416.png">
-                            <img src="images/logo-no-slogan.png">
-                            <img src="images/notification_9383540.png">
-                            <img src="images/avatar_9892372.png">
-                            <img src="images/checkout_4765148.png" alt="Customer Basket Icon">
+                             <a href=""><img src="images/search.png" class="browse-icon"></a>
+                             <a href=""><img src="images/home_4991416.png"></a>
+                             <a href=""><img src="images/about-us.png" class="about-us-icon"></a>
+                             <a href=""><img src="images/notification_9383540.png" class="contact-us-icon"></a>
+                             <a href=""><img src="images/avatar_9892372.png" class="account-icon"></a>
+                             <a href=""><img src="images/checkout_4765148.png" class="basket-icon"></a>
                         </div>
 
                         <div class="nav-links">
@@ -39,6 +39,11 @@
                             <li><a href="">Account</a></li>
                             <li><a href="">Basket</a></li>
                         </ul>
+                        </div>
+
+                        <div class="search-bar">
+                            <input type="text" placeholder="Search">
+                            <button type="submit"><img src="images/search.png"></button>
                         </div>
                     </nav>
 
@@ -52,9 +57,12 @@
         <div class="log-in">
             <section class="heading">
                 <h1>Educate with UNITOP</h1>
-                <p>Choose a laptop that aligns perfetly with your students academic pursuits.
-                    <br>Choose the features that matter to your students, from powerful processors 
-                    <br>for seamless coding to lightweight designs for the mobility demands of your medics.
+                <p>Choose a laptop that aligns perfectly 
+                    <br>with your students academic pursuits.
+                    <br>Choose the features that matter to your 
+                    <br>students, from powerful processors 
+                    <br>for seamless coding to lightweight designs 
+                    <br>for the mobility demands of your medics.
                     <br>Choose to empower your students journey through UNITOP.
                 </p>
 
