--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -56,13 +56,10 @@
         <!--Log In button in big screen-->
         <div class="log-in">
             <section class="heading">
-                <h1>Educate with UNITOP</h1>
-                <p>Choose a laptop that aligns perfectly 
-                    <br>with your students academic pursuits.
-                    <br>Choose the features that matter to your 
-                    <br>students, from powerful processors 
-                    <br>for seamless coding to lightweight designs 
-                    <br>for the mobility demands of your medics.
+                <h1>Educate with <br> UNITOP</h1>
+                <p>Choose a laptop that aligns perfectly with your students academic pursuits.
+                    <br>Choose the features that matter to your students, from powerful processors 
+                    <br>for seamless coding to lightweight designs for the mobility demands of your medics.
                     <br>Choose to empower your students journey through UNITOP.
                 </p>
 
