--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -76,26 +76,34 @@
 <div class="product">
     <h2>Featured Products</h2>
     <section class="row">
-        <section class="products">
-            <a href="products.html"> <img src="images/legion9iGen8.png" alt="Lenovo Legion 9i Gen 8 Laptop"> </a>
-            <h4>Lenovo</h4>
-            <p>£1</p>
-        </section>
-        <section class="products">
-            <img src="images/legion9iGen8.png" alt="Lenovo Legion 9i Gen 8 Laptop">
-            <h4>Lenovo</h4>
-            <p>£1</p>
-        </section>
-        <section class="products">
-            <img src="images/legion9iGen8.png" alt="Lenovo Legion 9i Gen 8 Laptop">
-            <h4>Lenovo</h4>
-            <p>£1</p>
-        </section>
-        <section class="products">
-            <img src="images/legion9iGen8.png" alt="Lenovo Legion 9i Gen 8 Laptop">
-            <h4>Lenovo</h4>
-            <p>£1</p>
-        </section>
+        <div class="featured-img">
+            <section class="products">
+                <img src="images/E-sports/LegionPro7front.png" alt="">
+                <h4>Legion Pro 7 (Gen8)</h4>
+                <p>£2,999.00</p>
+            </section>
+            <section class="products">
+                <img src="images/Medicine/SurfacePro8front.png" class="fp2" alt="">
+                <h4>Surface Pro 8</h4>
+                <p>£999.00</p>
+            </section>
+            <section class="products">
+                <img src="images/Graphics Design/MacBookProfront.png" alt="">
+                <h4>14-inch MacBook Pro</h4>
+                <p>£1,699.00</p>
+            </section>
+            <section class="products">
+                <img src="images/Law/HP15front.png" alt="">
+                <h4>HP 15-fd0023na Laptop</h4>
+                <p>£149.00</p>
+            </section>
+            <section class="products">
+                <a href="products.html"> <img src="images/ComputerScience/dellxps15front.avif" class="fp1" alt="Dell XPS 15 Laptop"> </a>
+                <h4>Dell XPS 15 Laptop</h4>
+                <p>£1,546.80</p>
+            </section>
+        </div>
+        
     <section>
 </div>
 
