--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -73,12 +73,12 @@
     </header>
 
 <!--Product showcase row-->
-<div class="product">
+<div class="prod">
     <h2>Featured Products</h2>
     <section class="row">
         <div class="featured-img">
             <section class="products">
-                <img src="images/E-sports/LegionPro7front.png" alt="">
+                <img src="images/E-sports/LegionPro7front.png" alt="" class="fp3">
                 <h4>Legion Pro 7 (Gen8)</h4>
                 <p>£2,999.00</p>
             </section>
@@ -88,12 +88,12 @@
                 <p>£999.00</p>
             </section>
             <section class="products">
-                <img src="images/Graphics Design/MacBookProfront.png" alt="">
+                <img src="images/Graphics Design/MacBookProfront.png" alt="" class="fp3">
                 <h4>14-inch MacBook Pro</h4>
                 <p>£1,699.00</p>
             </section>
             <section class="products">
-                <img src="images/Law/HP15front.png" alt="">
+                <img src="images/Law/HP15front.png" alt="" class="fp3">
                 <h4>HP 15-fd0023na Laptop</h4>
                 <p>£149.00</p>
             </section>
@@ -103,24 +103,27 @@
                 <p>£1,546.80</p>
             </section>
         </div>
-        
     <section>
+        <!--<div class="prod-button">
+            <button class="button">Explore More</button>
+        </div>-->
 </div>
 
 <!--Discount-->
-<div class="discount">
-        <section class="disc">
-            <img src="images/dell-xps-15.png" class="disc-img">
+<div class="about">
+        <section class="box">
+            <h1>Who we are!</h1>
+            <p>Dive into our company.</p>
+            <a href="" class="button">About Us</a>
         </section>
-        <section class="disc">
-            <h1>Black Friday Deals are Early!</h1>
-            <p>A true powerhouse, with its 11th Gen Intel Core processor 
-                <br>and NVIDIA GeForce RTX graphics card, at only £1. </p>
-            <a href="" class="button"> Buy Now</a>
+        <section class="box">
+            <h1>How to reach us!</h1>
+            <p>Contact us through here.</p>
+            <a href="" class="button">Contact Us</a>
         </section>
 </div>
 
-<!--Product showcase row-->
+<!--Product showcase row
 <div class="product">
     <h2>Latest Products</h2>
     <section class="row">
@@ -145,7 +148,7 @@
             <p>£1</p>
         </section>
     <section>
-</div>
+</div>-->
 
 <footer>
     <div class="footer">
