--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -78,29 +78,34 @@
     <section class="row">
         <div class="featured-img">
             <section class="products">
-                <img src="images/E-sports/LegionPro7front.png" alt="" class="fp3">
+                <img src="images/legion-front.png" alt="" class="fp3">
                 <h4>Legion Pro 7 (Gen8)</h4>
                 <p>£2,999.00</p>
+                <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <img src="images/Medicine/SurfacePro8front.png" class="fp2" alt="">
+                <img src="images/surface-front.png" class="fp2" alt="">
                 <h4>Surface Pro 8</h4>
                 <p>£999.00</p>
+                <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <img src="images/Graphics Design/MacBookProfront.png" alt="" class="fp3">
+                <img src="images/mac-front.png" alt="" class="fp3">
                 <h4>14-inch MacBook Pro</h4>
                 <p>£1,699.00</p>
+                <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <img src="images/Law/HP15front.png" alt="" class="fp3">
+                <img src="images/hp-front.png" alt="" class="fp3">
                 <h4>HP 15-fd0023na Laptop</h4>
                 <p>£149.00</p>
+                <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <a href="products.html"> <img src="images/ComputerScience/dellxps15front.avif" class="fp1" alt="Dell XPS 15 Laptop"> </a>
+                <a href="products.html"> <img src="images/dell-front.png" class="fp1" alt="Dell XPS 15 Laptop"> </a>
                 <h4>Dell XPS 15 Laptop</h4>
                 <p>£1,546.80</p>
+                <button class="button">Quick Add</button>
             </section>
         </div>
     <section>
@@ -114,11 +119,13 @@
         <section class="box">
             <h1>Who we are!</h1>
             <p>Dive into our company.</p>
+            <img src="images/abouts.jpg">
             <a href="" class="button">About Us</a>
         </section>
         <section class="box">
             <h1>How to reach us!</h1>
             <p>Contact us through here.</p>
+            <img src="images/contacts.jpg">
             <a href="" class="button">Contact Us</a>
         </section>
 </div>
@@ -154,26 +161,25 @@
     <div class="footer">
             <section class="footer-col">
                 <h3>UNITOP</h3>
-                <p>Education insert some slogan and stuff</p>
+                <p>Educate with UNITOP!</p>
             </section>
 
             <section class="footer-col1">
                 <img src="images/logo-no-slogan.png">
-                <p>Text</p>
             </section>
 
             <section class="footer-col2">
-                <h3>Links</h3>
                 <ul>
-                    <li>Contact</li>
-                    <li>About Us</li>
-                    <li>FAQ</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Account</a></li>
                 </ul>
 
         </section>
     </div>
     <hr>
-        <p class="terms">Terms and Conditions + Company Ltd</p>
+        <p class="terms">Terms and Conditions applies, UNITOP Ltd</p>
 </footer>
 </body>
-</html>
+</html> 
