--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -16,14 +16,14 @@
         <!--Banner, consists of logo and navbar-->
         <div class="banner">
             <section class="navbar">
-                <img src="images/logo-no-slogan.png" width="85px" alt="UNITOP logo">
+                <img src="images/logo-no-slogan.png" width="75px" alt="UNITOP logo">
                 <h1>UNITOP</h1>
                 <div class="links">
                     <nav>
                         <div class="img-links">
                              <!--Customer basket-->
-                             <a href=""><img src="images/search.png" class="browse-icon"></a>
-                             <a href=""><img src="images/home_4991416.png"></a>
+                             <!--<a href=""><img src="images/search.png" class="browse-icon"></a>-->
+                             <a href=""><img src="images/home_4991416.png" class="home-icon"></a>
                              <a href=""><img src="images/about-us.png" class="about-us-icon"></a>
                              <a href=""><img src="images/notification_9383540.png" class="contact-us-icon"></a>
                              <a href=""><img src="images/avatar_9892372.png" class="account-icon"></a>
@@ -32,7 +32,7 @@
 
                         <div class="nav-links">
                         <ul>
-                            <li><a href="">Browse</a></li>
+                           <!--<li><a href="">Browse</a></li>-->
                             <li><a href="">Home</a></li>
                             <li><a href="">About Us</a></li>
                             <li><a href="">Contact Us</a></li>
@@ -43,20 +43,22 @@
 
                         <div class="search-bar">
                             <input type="text" placeholder="Search">
-                            <button type="submit"><img src="images/search.png"></button>
+                            <button type="submit"><img src="images/search.png" class="search-icon"></button>
                         </div>
                     </nav>
 
                    </div>
             </section>
         </div>
+    </header>
 
         <!--Can we have a search bar at the top?-->
 
+        <div class="banner-log">
         <!--Log In button in big screen-->
         <div class="log-in">
             <section class="heading">
-                <h1>Educate with <br> UNITOP</h1>
+                <h1>Educate with UNITOP</h1>
                 <p>Choose a laptop that aligns perfectly with your students academic pursuits.
                     <br>Choose the features that matter to your students, from powerful processors 
                     <br>for seamless coding to lightweight designs for the mobility demands of your medics.
@@ -66,11 +68,11 @@
                 <a href="" class="button">Log In</a>
             </section>
 
-            <section class="image">
+            <!--<section class="image">
                 <img src="images/laptops.png" alt="3 laptops graphic">
-            </section>
+            </section>-->
         </div>
-    </header>
+    </div>
 
 <!--Product showcase row-->
 <div class="prod">
