--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -1,13 +1,9 @@
-<!--Will this page need to be .html or .php-->
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-
-    <title>UNITOP</title>
+    <title>UNITOP/HomePage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -54,6 +50,14 @@
 
         <!--Can we have a search bar at the top?-->
 
+        <div class="menu">
+            <a href="">Computer Science</a>
+            <a href=""> E-sports</a>
+            <a href="">Graphics Design</a>
+            <a href="">Law</a>
+            <a href="">Medicine</a>
+        </div>
+        
         <div class="banner-log">
         <!--Log In button in big screen-->
         <div class="log-in">
@@ -74,7 +78,7 @@
         </div>
     </div>
 
-<!--Product showcase row-->
+<!--Product showcase row/ arrows would be nice-->
 <div class="prod">
     <h2>Featured Products</h2>
     <section class="row">
