--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -117,16 +117,14 @@
 
 <!--About Us+Contact Us - showcase Melissa's work-->
 <div class="about">
-        <section class="box">
+        <section class="box" style="background-image: url(images/about-us.jpg);">
             <h1>Who we are!</h1>
             <p>Dive into our company.</p>
-            <img src="images/abouts.jpg">
             <a href="" class="button">About Us</a>
         </section>
-        <section class="box">
+        <section class="box" style="background-image: url(images/contact-us.jpg);">
             <h1>How to reach us!</h1>
             <p>Contact us through here.</p>
-            <img src="images/contacts.jpg">
             <a href="" class="button">Contact Us</a>
         </section>
 </div>
