--- a/payments.html
+++ b/payments.html
@@ -57,7 +57,7 @@
 
                 <div class="inputBox">
                     <span>Cards Accepted :</span>
-                    <img src="images/card_img.png" alt="">
+                    <img src="assests/Payments/card_img.png" alt="">
                 </div>
                 <div class="inputBox">
                     <span>Name On Card :</span>
