Rewording Payments Page
Rewording payments page to be more direct towards the company.

--- a/payments.html
+++ b/payments.html
@@ -19,32 +19,32 @@
 
             <div class="col">
 
-                <h3 class="title">Billing address</h3>
+                <h3 class="title">Billing Address</h3>
 
                 <div class="inputBox">
-                    <span>Full Name :</span>
+                    <span>Full Name:</span>
                     <input type="text" placeholder="Steve Smith">
                 </div>
                 <div class="inputBox">
-                    <span>Email :</span>
+                    <span>Company Email:</span>
                     <input type="email" placeholder="example@example.com">
                 </div>
                 <div class="inputBox">
-                    <span>Address :</span>
-                    <input type="text" placeholder="room - street - locality">
+                    <span>Company Address:</span>
+                    <input type="text" placeholder="Street etc.">
                 </div>
                 <div class="inputBox">
-                    <span>City :</span>
+                    <span>City:</span>
                     <input type="text" placeholder="Birmingham">
                 </div>
 
                 <div class="flex">
                     <div class="inputBox">
-                        <span>State :</span>
-                        <input type="text" placeholder="United Kingdom">
+                        <span>Area:</span>
+                        <input type="text" placeholder="Aston">
                     </div>
                     <div class="inputBox">
-                        <span>Zip code :</span>
+                        <span>Post Code:</span>
                         <input type="text" placeholder="123 456">
                     </div>
                 </div>
@@ -56,25 +56,25 @@
                 <h3 class="title">Payment</h3>
 
                 <div class="inputBox">
-                    <span>Cards Accepted :</span>
+                    <span>Cards Accepted:</span>
                     <img src="assests/Payments/card_img.png" alt="">
                 </div>
                 <div class="inputBox">
-                    <span>Name On Card :</span>
+                    <span>Name On Card:</span>
                     <input type="text" placeholder="Mr.Steve Smith">
                 </div>
                 <div class="inputBox">
-                    <span> Credit Card Number :</span>
+                    <span> Credit Card Number:</span>
                     <input type="number" placeholder="1111-2222-3333-4444">
                 </div>
                 <div class="inputBox">
-                    <span>Exp Month :</span>
+                    <span>Exp Month:</span>
                     <input type="text" placeholder="January">
                 </div>
 
                 <div class="flex">
                     <div class="inputBox">
-                        <span>Exp Year :</span>
+                        <span>Exp Year:</span>
                         <input type="number" placeholder="2024">
                     </div>
                     <div class="inputBox">
