--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <!--NAVBAR-->
         <div class="banner">
             <section class="navbar">
-                <img src="images/Navbar/logo-no-slogan.png" width="75px" alt="UNITOP logo">
+                <img src="assests/Navbar/logo-no-slogan.png" width="75px" alt="UNITOP logo">
                 <h1>UNITOP</h1>
                 <div class="links">
                     <nav>
                         <div class="img-links">
                              <!--Customer basket-->
                              <!--<a href=""><img src="images/search.png" class="browse-icon"></a>-->
-                             <a href=""><img src="images/Navbar/home_4991416.png" class="home-icon"></a>
-                             <a href=""><img src="images/Navbar/about-us.png" class="about-us-icon"></a>
-                             <a href=""><img src="images/Navbar/notification_9383540.png" class="contact-us-icon"></a>
-                             <a href=""><img src="images/Navbar/avatar_9892372.png" class="account-icon"></a>
-                             <a href=""><img src="images/Navbar/checkout_4765148.png" class="basket-icon"></a>
+                             <a href=""><img src="assests/Navbar/home_4991416.png" class="home-icon"></a>
+                             <a href=""><img src="assests/Navbar/about-us.png" class="about-us-icon"></a>
+                             <a href=""><img src="assests/Navbar/notification_9383540.png" class="contact-us-icon"></a>
+                             <a href=""><img src="assests/Navbar/avatar_9892372.png" class="account-icon"></a>
+                             <a href=""><img src="assests/Navbar/checkout_4765148.png" class="basket-icon"></a>
                         </div>
 
                         <div class="nav-links">
@@ -40,7 +40,7 @@
                         <!---Search Bar--->
                         <div class="search-bar">
                             <input type="text" placeholder="Search">
-                            <button type="submit"><img src="images/Navbar/search.png" class="search-icon"></button>
+                            <button type="submit"><img src="assests/Navbar/search.png" class="search-icon"></button>
                         </div>
                     </nav>
 
@@ -63,7 +63,7 @@
     <!--Banner to encourage log-in, necessary to be able to purchase from the store-->
     <div class="banner-log">
         <!--Log In button in big screen-->
-        <div class="log-in">
+        <div class="log-in" style="background-image: url(assests/Banners/banner.jpg);">
             <section class="heading">
                 <h1>Educate with UNITOP</h1>
                 <p>Choose a laptop that aligns perfectly with your students academic pursuits.
@@ -82,31 +82,31 @@
     <section class="row">
         <div class="featured-img">
             <section class="products">
-                <img src="images/E-sports/legion-front.png" alt="">
+                <img src="assests/E-sports/legion-front.png" alt="">
                 <h4>Legion Pro 7 (Gen8)</h4>
                 <p>£2,999.00</p>
                 <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <img src="images/Medicine/surface-front.png" alt="">
+                <img src="assests/Medicine/surface-front.png" alt="">
                 <h4>Surface Pro 8</h4>
                 <p>£999.00</p>
                 <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <img src="images/Graphics Design/mac-front.png" alt="">
+                <img src="assests/Graphics Design/mac-front.png" alt="">
                 <h4>14-inch MacBook Pro</h4>
                 <p>£1,699.00</p>
                 <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <img src="images/Law/hp-front.png" alt="">
+                <img src="assests/Law/hp-front.png" alt="">
                 <h4>HP 15-fd0023na Laptop</h4>
                 <p>£149.00</p>
                 <button class="button">Quick Add</button>
             </section>
             <section class="products">
-                <a href="products.html"> <img src="images/ComputerScience/dell-front.png" alt="Dell XPS 15 Laptop"> </a>
+                <a href="products.html"> <img src="assests/Computer Science/dell-front.png" alt="Dell XPS 15 Laptop"> </a>
                 <h4>Dell XPS 15 Laptop</h4>
                 <p>£1,546.80</p>
                 <button class="button">Quick Add</button>
@@ -117,12 +117,12 @@
 
 <!--About Us+Contact Us - showcase Melissa's work-->
 <div class="about">
-        <section class="box" style="background-image: url(images/about-us.jpg);">
+        <section class="box" style="background-image: url(assests/Banners/about-us.jpg);">
             <h1>Who we are!</h1>
             <p>Dive into our company.</p>
             <a href="" class="button">About Us</a>
         </section>
-        <section class="box" style="background-image: url(images/contact-us.jpg);">
+        <section class="box" style="background-image: url(assests/Banners/contact-us.jpg);">
             <h1>How to reach us!</h1>
             <p>Contact us through here.</p>
             <a href="" class="button">Contact Us</a>
@@ -133,7 +133,7 @@
 <footer>
 <div class="footer">
     <div class="footer-box">
-        <img src="images/Navbar/logo-no-slogan.png">
+        <img src="assests/Navbar/logo-no-slogan.png">
         <h3>UNITOP</h3>
         <p>Educate with UNITOP!</p>
         <button class="btn">Log In</button>
@@ -142,9 +142,9 @@
     <div class="footer-box">
         <h3>Follow Us</h3>
         <div class="socials">
-            <img src="images/Footer/instagram.png">
-            <img src="images/Footer/facebook.png">
-            <img src="images/Footer/linkedin.png"> 
+            <img src="assests/Footer/instagram.png">
+            <img src="assests/Footer/facebook.png">
+            <img src="assests/Footer/linkedin.png"> 
         </div>
     </div>
 
