--- a/login.html
+++ b/login.html
@@ -8,6 +8,44 @@
     <title>Login</title>
 </head>
 <body>
+    <header>
+        <!--NAVBAR-->
+        <div class="banner">
+            <section class="navbar">
+                <img src="assests/Navbar/logo-no-slogan.png" width="75px" alt="UNITOP logo">
+                <h1>UNITOP</h1>
+                <div class="links">
+                    <nav>
+                        <div class="img-links">
+                             <!--Customer basket-->
+                             <!--<a href=""><img src="images/search.png" class="browse-icon"></a>-->
+                             <a href="index.html"><img src="assests/Navbar/home_4991416.png" class="home-icon"></a>
+                             <a href=""><img src="assests/Navbar/about-us.png" class="about-us-icon"></a>
+                             <a href=""><img src="assests/Navbar/notification_9383540.png" class="contact-us-icon"></a>
+                             <a href=""><img src="assests/Navbar/avatar_9892372.png" class="account-icon"></a>
+                             <a href=""><img src="assests/Navbar/checkout_4765148.png" class="basket-icon"></a>
+                        </div>
+                        <div class="nav-links">
+                        <ul>
+                           <!--<li><a href="">Browse</a></li>-->
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Contact Us</a></li>
+                            <li><a href="">Account</a></li>
+                            <li><a href="">Basket</a></li>
+                        </ul>
+                        </div>
+                        <!---Search Bar--->
+                        <div class="search-bar">
+                            <input type="text" placeholder="Search">
+                            <button type="submit"><img src="assests/Navbar/search.png" class="search-icon"></button>
+                        </div>
+                    </nav>
+                   </div>
+            </section>
+        </div>
+    </header>
+
        <div class="container">
         <div class="box f-box">
         
@@ -34,5 +72,47 @@
             </div>
 
        </div>
+
+       <footer>
+        <div class="footer">
+            <div class="footer-box">
+                <img src="assests/Navbar/logo-no-slogan.png">
+                <h3>UNITOP</h3>
+                <p>Educate with UNITOP!</p>
+                <a href="login.html" class="btn">Log In</a>
+            </div>
+            <div class="footer-box">
+                <h3>Follow Us</h3>
+                <div class="socials">
+                    <img src="assests/Footer/instagram.png">
+                    <img src="assests/Footer/facebook.png">
+                    <img src="assests/Footer/linkedin.png"> 
+                </div>
+            </div>
+            <div class="footer-box">
+                <h3>About Us</h3>
+                <ul>
+                    <li><a href="">Who We Are</a></li>
+                    <br>
+                    <li><a href="">Our Mission</a></li>
+                    <br>
+                    <li><a href="">The Team</a></li>
+                </ul>
+            </div>
+            <div class="footer-box">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <br>
+                    <li><a href="">Contact Us</a></li>
+                    <br>
+                    <li><a href="">About Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="line">
+              <p>Terms and Conditions apply* | UNITOP Limited</p>
+        </div>
+        </footer>
 </body>
 </html>
