--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="img-links">
                              <!--Customer basket-->
                              <!--<a href=""><img src="images/search.png" class="browse-icon"></a>-->
-                             <a href=""><img src="assests/Navbar/home_4991416.png" class="home-icon"></a>
+                             <a href="index.html"><img src="assests/Navbar/home_4991416.png" class="home-icon"></a>
                              <a href=""><img src="assests/Navbar/about-us.png" class="about-us-icon"></a>
                              <a href=""><img src="assests/Navbar/notification_9383540.png" class="contact-us-icon"></a>
                              <a href=""><img src="assests/Navbar/avatar_9892372.png" class="account-icon"></a>
@@ -29,7 +29,7 @@
                         <div class="nav-links">
                         <ul>
                            <!--<li><a href="">Browse</a></li>-->
-                            <li><a href="">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="">About Us</a></li>
                             <li><a href="">Contact Us</a></li>
                             <li><a href="">Account</a></li>
@@ -71,7 +71,8 @@
                     <br>for seamless coding to lightweight designs for the mobility demands of your medics.
                     <br>Choose to empower your students journey through UNITOP.
                 </p>
-                <a href="" class="button">Log In</a>
+                <a href="login.html" class="button">Log In</a> or
+                <a href="register.html" class="button">Sign Up</a>
             </section>
         </div>
     </div>
@@ -136,7 +137,7 @@
         <img src="assests/Navbar/logo-no-slogan.png">
         <h3>UNITOP</h3>
         <p>Educate with UNITOP!</p>
-        <button class="btn">Log In</button>
+        <a href="login.html" class="btn">Log In</a>
     </div>
 
     <div class="footer-box">
@@ -166,12 +167,12 @@
             <br>
             <li><a href="">Contact Us</a></li>
             <br>
-            <li><a href="">Account</a></li>
+            <li><a href="">About Us</a></li>
         </ul>
     </div>
 </div>
 <div class="line">
-      <p>Terms and Conditions apply* | UNTIP Limited</p>
+      <p>Terms and Conditions apply* | UNITOP Limited</p>
 </div>
 
 </footer>
