adding logo to tab

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>UNITOP/HomePage</title>
     <link rel="stylesheet" href="css/home-page.css">
+    <link rel="shortcut icon" type="icon" href="assests/Banners/logo.png">
 </head>
 
 <body>
