--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
         <div class="box f-box">
         
             <header>Sign Up</header>
-            <form action="" method="post">
+            <form action="register.php" method="post">
                 
                 <div class="input field">
                     <label for="email">Email:</label>
