--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
         <div class="box f-box">
         
             <header>Login</header>
-            <form action="" method="post">
+            <form action="login.php" method="post">
                 <div class="input field">
                     <label for="email">Username:</label>
                     <input type="text" name="email" id="email" placeholder="Email" required> 
