--- a/register.html
+++ b/register.html
@@ -58,8 +58,8 @@
             <form action="register.php" method="post">
                 
                 <div class="input field">
-                    <label for="email">Email:</label>
-                    <input type="text" name="email" id="email" placeholder="Email" required> 
+                    <label for="Email">Email:</label>
+                    <input type="text" name="Email" id="Email" placeholder="Email" required> 
                 </div>
 
                 <div class="input field">
