--- a/login.html
+++ b/login.html
@@ -53,8 +53,8 @@
             <header>Login</header>
             <form action="login.php" method="post">
                 <div class="input field">
-                    <label for="email">Username:</label>
-                    <input type="text" name="email" id="email" placeholder="Email" required> 
+                    <label for="Email">Username:</label>
+                    <input type="text" name="Email" id="Email" placeholder="Email" required> 
                 </div>
 
                 <div class="input field">
