--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - uniTOP</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/contacts.css">
 </head>
 <body>
     <div class="ct-pageWrapper" id="ct-js-wrapper">
