--- a/index.html
+++ b/index.html
@@ -88,31 +88,31 @@
             <img src="assests/E-sports/legion-front.png" alt="">
             <h4>Legion Pro 7 (Gen8)</h4>
             <p>£2,999.00</p>
-            <button class="button">Quick Add</button>
+            <button class="button">More Details</button>
         </section>
         <section class="products">
             <img src="assests/Medicine/surface-front.png" alt="">
             <h4>Surface Pro 8</h4>
             <p>£999.00</p>
-            <button class="button">Quick Add</button>
+            <button class="button">More Details</button>
         </section>
         <section class="products">
             <img src="assests/Graphics Design/mac-front.png" alt="">
             <h4>14-inch MacBook Pro</h4>
             <p>£1,699.00</p>
-            <button class="button">Quick Add</button>
+            <button class="button">More Details</button>
         </section>
         <section class="products">
             <img src="assests/Law/hp-front.png" alt="">
             <h4>HP 15-fd0023na Laptop</h4>
             <p>£149.00</p>
-            <button class="button">Quick Add</button>
+            <button class="button">More Details</button>
         </section>
         <section class="products">
             <a href="products.html"> <img src="assests/Computer Science/dell-front.png" alt="Dell XPS 15 Laptop"> </a>
             <h4>Dell XPS 15 Laptop</h4>
             <p>£1,546.80</p>
-            <button class="button">Quick Add</button>
+            <button class="button">More Details</button>
         </section>
         </div>
     <section>
