--- a/payments.html
+++ b/payments.html
@@ -54,7 +54,7 @@
 
 <div class="container">
 
-    <form action="php/store-payments.php" method="post">
+    <form action="store-payments.php" method="post">
 
         <div class="row">
 
