--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                              <a href="about-us.html"><img src="assests/Navbar/about-us.png" class="about-us-icon"></a>
                              <a href="contact.html"><img src="assests/Navbar/notification_9383540.png" class="contact-us-icon"></a>
                              <a href=""><img src="assests/Navbar/avatar_9892372.png" class="account-icon"></a>
-                             <a href="basket.html"><img src="assests/Navbar/checkout_4765148.png" class="basket-icon"></a>
+                             <a href="basket.php"><img src="assests/Navbar/checkout_4765148.png" class="basket-icon"></a>
                         </div>
 
                         <div class="nav-links">
@@ -34,7 +34,7 @@
                             <li><a href="about-us.html">About Us</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                             <li><a href="account.html">Account</a></li>
-                            <li><a href="basket.html">Basket</a></li>
+                            <li><a href="basket.php">Basket</a></li>
                         </ul>
                         </div>
                     
