--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <img src="assests/Navbar/logo-no-slogan.png">
         <h3>UNITOP</h3>
         <p>Educate with UNITOP!</p>
-        <a href="login.html" class="btn">Log In</a>
+        <a href="login.php" class="btn">Log In</a>
     </div>
 
     <div class="footer-box">
@@ -154,22 +154,22 @@
     <div class="footer-box">
         <h3>About Us</h3>
         <ul>
-            <li><a href="">Who We Are</a></li>
+            <li><a href="about-us.html">Who We Are</a></li>
             <br>
-            <li><a href="">Our Mission</a></li>
+            <li><a href="about-us.html">Our Mission</a></li>
             <br>
-            <li><a href="">The Team</a></li>
+            <li><a href="about-us.html">The Team</a></li>
         </ul>
     </div>
 
     <div class="footer-box">
         <h3>Useful Links</h3>
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="index.php">Home</a></li>
             <br>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <br>
-            <li><a href="">About Us</a></li>
+            <li><a href="about-us.html">About Us</a></li>
         </ul>
     </div>
 </div>
